# esig

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  release.yml  rust.yml
assets/: esig.icns
scripts/: Info.plist  bundle.sh  esig.desktop  genicons.sh  setup.sh
src/: app.rs  export_dialog.rs  fft.rs  main.rs  menubar.rs  open_dialog.rs  psd_dialog.rs  series.rs  sig.rs  signal_plot.rs  utils.rs
