[package]
name = "esig"
version = "0.1.1"
edition = "2021"
description = "A fast signal display tool written in rust and egui, which automatically downsamples and can open large signal files (>200MB)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.0"
egui_plot = "0.29.0"
emath = "0.29.0"
image = "0.25.1"
rayon = "1.10.0"
rfd = "0.15.1"
rustfft = "6.2.0"

[build-dependencies]
winresource = "0.1.17"
